--- a/_layouts/event.html
+++ b/_layouts/event.html
@@ -3,5 +3,62 @@ layout: page
 ---
 {{content}}
 <h2>Reservation shit</h2>
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-7s5uDGW3AHqw6xtJmNNtr+OBRJUlgkNJEo78P4b0yRw= sha512-nNo+yCHEyn0smMxSswnf/OnX6/KwJuZTlNZBjauKhTK0c+zT+q5JOCx0UFhXQ6rJR9jg6Es8gPuD2uZcYDLqSw==" crossorigin="anonymous">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-hQpvDQiCJaD2H465dQfA717v7lu5qHWtDbWNPvaTJ0ID5xnPUlVXnKzq7b8YUkbN" crossorigin="anonymous">
+  <link href="https://alegriaforms-cd35.restdb.io/assets/css/jquery.datetimepicker.min.css" rel="stylesheet">
+  <style>
+    .thank-you{
+      font-size: 16px;
+      padding: 20px;
+    }
+    #event-submission-form{
+      padding: 10px;
+    }
+    #event-submission-form input,  #event-submission-form select{
+      width: 300px;
+    }
+    label{
+      display: block;
+    }
+    .form-control{
+      width: auto;
+    }
+    .help-block{
+      margin-left:10px;
+    }
+    .progress{
+      width: 300px;
+      height:10px;
+      border-radius:0px;
+      margin-top: 2px;
+    }
+    #btn-submit{
+        width: 300px;
+    }
+  </style>
 
+  <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha256-KXn5puMvxCw+dAYznun+drMdG1IFl3agK0p/pqT9KAo= sha512-2e8qq0ETcfWRI4HJBzQiA3UoyFk6tbNyG+qSaIBZLyW9Xf3sWZHN/lxe9fTh1U45DpPf07yj94KsUHHWe4Yk1A==" crossorigin="anonymous"></script>
+  <script src="https://alegriaforms-cd35.restdb.io/assets/js/jquery-serialize-object.min.js"></script>
+  <script src="https://alegriaforms-cd35.restdb.io/assets/js/jquery.datetimepicker.full.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.5.1/lodash.min.js"></script>
+<script type="text/javascript">{% include js/restdb.io.js %}</script>
 event form id: {{page.event-form-id}}
+<form role="form" id="event-submission-form">
+<div class="form-group">
+  <label>Voornaam: </label><input class="form-control" name="Voornaam" data-type="text" type="text" required>
+</div>
+<div class="form-group">
+  <label>Familienaam: </label><input class="form-control" name="Familienaam" data-type="text" type="text">
+</div>
+<div class="form-group">
+  <label>Event: </label><input class="form-control" name="event" data-type="text" type="text">
+</div>
+<div class="form-group">
+  <label>Email: </label><input class="form-control" name="email" data-type="email" type="email">
+</div>
+
+  <div id="fg-errors" class="form-group">
+  </div>
+  <button class="btn btn-primary btn-lg" id="btn-submit" type="submit" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i> Submitting...">Submit</button></form>
