fixed restdb javascript loading order issue.

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -13,6 +13,10 @@
   {{ content }}
 
   {% include footer.html %}
+  {% if page.layout == 'event' %}
+    <!-- load additional javascript for restdb form submission -->
+    {% include restdb.scripts.html %}
+  {% endif %}
 </body>
 
 </html>
