updated landing page & added it to navigation.

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,6 +2,7 @@
 <nav id="nav">
   <ul class="container">
     <!-- loop over pages -->
+    <li><a href="/">Home</a></li>
     {% for p in site.pages %}
       <!-- only include pages with titles -->
       {% if p.title != nil %}
