--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,10 @@
 <head>
-  <title>Miniport by HTML5 UP</title>
+  <title>
+    Waregems Gitaarensemble Alegria
+    {% if p.title != nil %}
+     - {{p.title}}
+     {% endif %}
+  </title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!--[if lte IE 8]><script src="/assets/js/ie/html5shiv.js"></script><![endif]-->
