--- a/_layouts/event.html
+++ b/_layouts/event.html
@@ -1,6 +1,9 @@
 ---
 layout: page
 ---
+<script type="application/ld+json">
+{% include google_event.json %}
+</script>
 <div class="wrapper style1 first">
   <article id="portfolio" class="container">
 		<header>
