--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -5,5 +5,6 @@
     <li><a href="#events">Optredens</a></li>
     <li><a href="#music">Muziek</a></li>
     <li><a href="#links">Links</a></li>
+    <li><a href="#contact">Contact</a></li>
   </ul>
 </nav>
