added wanted and photos.

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -5,6 +5,8 @@
     <li><a href="#events">Optredens</a></li>
     <li><a href="#music">Muziek</a></li>
     <li><a href="#links">Links</a></li>
+    <li><a href="#wanted">Alegria zoekt gitaristen</a></li>
     <li><a href="#contact">Contact</a></li>
+    <li><a href="#fotos">Fotos</a></li>
   </ul>
 </nav>
