--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -8,6 +8,7 @@
     <li><a href="#wanted">Alegria zoekt gitaristen</a></li>
     <li><a href="#links">Links</a></li>
     <li><a href="#contact">Contact</a></li>
+    <li><a href="informatie-plicht.html">Informatieplicht</a></li>
 
   </ul>
 </nav>
