--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,22 +1,30 @@
 <!DOCTYPE HTML>
 <!--
-	Editorial by HTML5 UP
+	Spectral by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-
 {% include head.html %}
 
 <body>
-  {% include navigation.html %}
-  {{ content }}
+{% include header.html %}
 
-  {% include footer.html %}
-  {% if page.layout == 'event' %}
-    <!-- load additional javascript for restdb form submission -->
-    {% include restdb.scripts.html %}
-  {% endif %}
+<!-- Main -->
+<article id="main">
+  <header{% if page.image %} style="background-image: url('{% if site.featured-image-source %}{{ page.image | prepend: site.featured-image-source | absolute_url }}{% else %}{{ "" | absolute_url }}/assets/images/{{ page.image }}{% endif %}');"{% endif %}>
+  <h2>{{ page.title }}</h2>
+  <p>{{ page.description }}</p>
+  </header>
+
+
+      {{ content }}
+
+
+</article>
+
+{% include footer.html %}
+
 </body>
 
 </html>
