--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,4 +14,5 @@
   {% if page.layout != 'event'}
     {% seo %}
   {% endif %}
+  <meta name="google-site-verification" content="M7b34NDxj1UDRK3G_sdrWnNI70-FlyZ5QFu40BiXBlE" />
 </head>
