update page layout to already do the margins

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -16,10 +16,11 @@
   <h2>{{ page.title }}</h2>
   <p>{{ page.description }}</p>
   </header>
-
-
+  <section class="wrapper">
+   <div class="inner">
       {{ content }}
-
+   </div>
+  </section>
 
 </article>
 
